--- a/ServiceDesk/ServiceDesk.Ticket.Api/appsettings.json
+++ b/ServiceDesk/ServiceDesk.Ticket.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server = localhost; Database = TicketsDb; user id = SA; password = Pass@word; Encrypt = false; TrustServerCertificate = true; Integrated Security = false;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
