--- a/ServiceDesk/ServiceDesk.Ticket.Api/ServiceDesk.Ticket.Api.csproj
+++ b/ServiceDesk/ServiceDesk.Ticket.Api/ServiceDesk.Ticket.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -17,6 +17,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ServiceDesk.Ticket.Storage\ServiceDesk.Ticket.Storage.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
