Add Gateway connection

--- a/ServiceDesk/ServiceDesk.Authorization.Api/appsettings.json
+++ b/ServiceDesk/ServiceDesk.Authorization.Api/appsettings.json
@@ -1,8 +1,8 @@
 {
   "Jwt": {
-    "Key": "YourSecretKey",
-    "Issuer": "YourIssuer",
-    "Audience": "YourAudience"
+    "Key": "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNM",
+    "Issuer": "http://localhost:5023/",
+    "Audience": "http://localhost:5023/"
 
   },
   "ConnectionStrings": {
