--- a/ServiceDesk/ServiceDesk.User.Api/appsettings.json
+++ b/ServiceDesk/ServiceDesk.User.Api/appsettings.json
@@ -6,7 +6,7 @@
 
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server = 127.0.0.1; Database = <baza>; user id = SA; password = Pass@word; Encrypt = false; TrustServerCertificate = true; Integrated Security = false;"
+    "DefaultConnection": "Server = 127.0.0.1; Database = UserDb; user id = SA; password = Pass@word; Encrypt = false; TrustServerCertificate = true; Integrated Security = false;"
   },
   "Logging": {
     "LogLevel": {
