--- a/ServiceDesk/Gateway/appsettings.json
+++ b/ServiceDesk/Gateway/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "Jwt": {
+    "Key": "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNM",
+    "Issuer": "http://localhost:5023/",
+    "Audience": "http://localhost:5023/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,46 +11,7 @@
     }
   },
   "AllowedHosts": "*",
-  "Jwt": {
-    "Key": "Your_Secret_Key",
-    "Issuer": "Your_Issuer",
-    "Audience": "Your_Audience"
-  },
-  "Routes": [
-    {
-      "DownstreamPathTemplate": "/api/auth/{everything}",
-      "DownstreamScheme": "https",
-      "DownstreamHostAndPorts": [
-        {
-          "Host": "localhost",
-          "Port": 5001
-        }
-      ],
-      "UpstreamPathTemplate": "/auth/{everything}",
-      "UpstreamHttpMethod": [ "POST", "GET", "PUT", "DELETE" ],
-      "AuthenticationOptions": {
-        "AuthenticationProviderKey": "JwtBearer",
-        "AllowedScopes": []
-      }
-    },
-    {
-      "DownstreamPathTemplate": "/api/user/{everything}",
-      "DownstreamScheme": "https",
-      "DownstreamHostAndPorts": [
-        {
-          "Host": "localhost",
-          "Port": 5002
-        }
-      ],
-      "UpstreamPathTemplate": "/user/{everything}",
-      "UpstreamHttpMethod": [ "POST", "GET", "PUT", "DELETE" ],
-      "AuthenticationOptions": {
-        "AuthenticationProviderKey": "JwtBearer",
-        "AllowedScopes": []
-      }
-    }
-  ],
-  "GlobalConfiguration": {
-    "BaseUrl": "https://localhost:5000"
+  "ConnectionStrings": {
+    "UserDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Gateway;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
