--- a/ServiceDesk/Gateway/Gateway.csproj
+++ b/ServiceDesk/Gateway/Gateway.csproj
@@ -8,7 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.7" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CrudBase\CrudBase.csproj" />
+    <ProjectReference Include="..\Gateway.Storage\Gateway.Storage.csproj" />
   </ItemGroup>
 
 </Project>
