--- a/ServiceDesk/Gateway/Gateway.csproj
+++ b/ServiceDesk/Gateway/Gateway.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -6,10 +6,6 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
-
-  <ItemGroup>
-    <_ContentIncludedByDefault Remove="ocelot.json" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
@@ -33,15 +29,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Areas\Identity\Data\" />
     <Folder Include="Views\Login\" />
     <Folder Include="Views\Register\" />
     <Folder Include="Views\User\" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ServiceDesk.Authorization.Api\ServiceDesk.Authorization.Api.csproj" />
-    <ProjectReference Include="..\ServiceDesk.Authorization.CrossCutting\ServiceDesk.Authorization.CrossCutting.csproj" />
-    <ProjectReference Include="..\ServiceDesk.Authorization.Storage\ServiceDesk.Authorization.Storage.csproj" />
     <ProjectReference Include="..\ServiceDesk.User.Api\ServiceDesk.User.Api.csproj" />
     <ProjectReference Include="..\ServiceDesk.User.CrossCutting\ServiceDesk.User.CrossCutting.csproj" />
     <ProjectReference Include="..\ServiceDesk.User.Storage\ServiceDesk.User.Storage.csproj" />
