Dodanie logów i template

--- a/ServiceDesk/EmailNotification/appsettings.json
+++ b/ServiceDesk/EmailNotification/appsettings.json
@@ -13,5 +13,30 @@
     "SenderEmail": "test123456@example.com",
     "UserName": "",
     "Password": ""
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-F3H3LQ0;Database=EmailLog;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.MSSqlServer" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "DefaultConnection",
+          "tableName": "EmailLogs",
+          "autoCreateSqlTable": true
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext" ]
   }
 }
