moved auth and users to gateway, login is working now

--- a/ServiceDesk/Gateway/appsettings.json
+++ b/ServiceDesk/Gateway/appsettings.json
@@ -1,8 +1,8 @@
 {
   "Jwt": {
     "Key": "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNM",
-    "Issuer": "http://localhost:5023/",
-    "Audience": "http://localhost:5023/"
+    "Issuer": "http://localhost:5269",
+    "Audience": "http://localhost:5269"
   },
   "Logging": {
     "LogLevel": {
@@ -12,6 +12,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "UserDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Gateway;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server = 127.0.0.1; Database =Gateway; user id = SA; password = Pass@word; Encrypt = false; TrustServerCertificate = true; Integrated Security = false;"
   }
+
+
 }
