fixed post merge errors

--- a/ServiceDesk/EmailNotification/appsettings.json
+++ b/ServiceDesk/EmailNotification/appsettings.json
@@ -33,7 +33,7 @@
         "Args": {
           "connectionString": "DefaultConnection",
           "tableName": "EmailLogs",
-          "autoCreateSqlTable": true
+          "autoCreateSqlTable": false
         }
       }
     ],
