--- a/ServiceDesk/EmailNotification/appsettings.json
+++ b/ServiceDesk/EmailNotification/appsettings.json
@@ -11,32 +11,32 @@
     "Port": "587",
     "SenderName": "TestMail",
     "SenderEmail": "test123456@example.com",
-    "UserName": "",
-    "Password": ""
+    "UserName": "1ac6ad283a67f5",
+    "Password": "a8d76eb806b19b"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-F3H3LQ0;Database=EmailLog;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DESKTOP-OO8S81V;Database=EmailLog;Trusted_Connection=True;TrustServerCertificate=True;"
   },
-  "Serilog": {
-    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.MSSqlServer" ],
-    "MinimumLevel": {
-      "Default": "Information",
-      "Override": {
-        "Microsoft": "Warning",
-        "System": "Warning"
-      }
-    },
-    "WriteTo": [
-      { "Name": "Console" },
-      {
-        "Name": "MSSqlServer",
-        "Args": {
-          "connectionString": "DefaultConnection",
-          "tableName": "EmailLogs",
-          "autoCreateSqlTable": false
-        }
-      }
-    ],
-    "Enrich": [ "FromLogContext" ]
-  }
+  //"Serilog": {
+  //  "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.MSSqlServer" ],
+  //  "MinimumLevel": {
+  //    "Default": "Information",
+  //    "Override": {
+  //      "Microsoft": "Warning",
+  //      "System": "Warning"
+  //    }
+  //  },
+  //  "WriteTo": [
+  //    { "Name": "Console" },
+  //    {
+  //      "Name": "MSSqlServer",
+  //      "Args": {
+  //        "connectionString": "DefaultConnection",
+  //        "tableName": "EmailLogs",
+  //        "autoCreateSqlTable": true
+  //      }
+  //    }
+  //  ],
+  //  "Enrich": [ "FromLogContext" ]
+  //}
 }
