--- a/ServiceDesk/ServiceDesk.Ticket.Api/ServiceDesk.Ticket.Api.csproj
+++ b/ServiceDesk/ServiceDesk.Ticket.Api/ServiceDesk.Ticket.Api.csproj
@@ -19,6 +19,8 @@
   <ItemGroup>
     <ProjectReference Include="..\ServiceDesk.Ticket.Storage\ServiceDesk.Ticket.Storage.csproj" />
 	  <ProjectReference Include="..\ServiceDesk.Ticket.CrossCutting\ServiceDesk.Ticket.CrossCutting.csproj" />
+	  <ProjectReference Include="..\ServiceDesk.Assets.Storage\ServiceDesk.Assets.Storage.csproj" />
+	  <ProjectReference Include="..\EmailNotification\EmailNotification.csproj" />
   </ItemGroup>
 
 </Project>
