--- a/ServiceDesk/ServiceDesk.Ticket.Api/appsettings.json
+++ b/ServiceDesk/ServiceDesk.Ticket.Api/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server = localhost; Database = TicketsDb; user id = SA; password = Pass@word; Encrypt = false; TrustServerCertificate = true; Integrated Security = false;"
+    "DefaultConnection": "Server=DESKTOP-OO8S81V;Database=TicketsDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;",
+    "Assetsconnection": "Server=DESKTOP-OO8S81V;Database=AssetsDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+    
   },
   "Logging": {
     "LogLevel": {
@@ -9,4 +11,5 @@
     }
   },
   "AllowedHosts": "*"
+
 }
