--- a/ServiceDesk/ServiceDesk.Ticket.Api/ServiceDesk.Ticket.Api.csproj
+++ b/ServiceDesk/ServiceDesk.Ticket.Api/ServiceDesk.Ticket.Api.csproj
@@ -20,6 +20,8 @@
     <ProjectReference Include="..\ServiceDesk.Ticket.Storage\ServiceDesk.Ticket.Storage.csproj" />
 	  <ProjectReference Include="..\ServiceDesk.Ticket.CrossCutting\ServiceDesk.Ticket.CrossCutting.csproj" />
 	  <ProjectReference Include="..\ServiceDesk.Assets.Storage\ServiceDesk.Assets.Storage.csproj" />
+	  <ProjectReference Include="..\ServiceDesk.Assets.CrossCutting\ServiceDesk.Assets.CrossCutting.csproj" />
+	  
 	  <ProjectReference Include="..\EmailNotification\EmailNotification.csproj" />
   </ItemGroup>
 
