--- a/ServiceDesk/ServiceDesk.Assets.API/appsettings.json
+++ b/ServiceDesk/ServiceDesk.Assets.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-OO8S81V;Database=AssetsDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
-    //"DefaultConnection": "Server = 127.0.0.1; Database = AssetsDb; user id = SA; password = Pass@word; Encrypt = false; TrustServerCertificate = true; Integrated Security = false;"
+    //"DefaultConnection": "Server=DESKTOP-OO8S81V;Database=AssetsDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+    "DefaultConnection": "Server = 127.0.0.1; Database = AssetsDb; user id = SA; password = Pass@word; Encrypt = false; TrustServerCertificate = true; Integrated Security = false;"
   }
 }
