--- a/ServiceDesk/EmailNotification/appsettings.json
+++ b/ServiceDesk/EmailNotification/appsettings.json
@@ -17,26 +17,26 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-OO8S81V;Database=EmailLog;Trusted_Connection=True;TrustServerCertificate=True;"
   },
-  //"Serilog": {
-  //  "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.MSSqlServer" ],
-  //  "MinimumLevel": {
-  //    "Default": "Information",
-  //    "Override": {
-  //      "Microsoft": "Warning",
-  //      "System": "Warning"
-  //    }
-  //  },
-  //  "WriteTo": [
-  //    { "Name": "Console" },
-  //    {
-  //      "Name": "MSSqlServer",
-  //      "Args": {
-  //        "connectionString": "DefaultConnection",
-  //        "tableName": "EmailLogs",
-  //        "autoCreateSqlTable": true
-  //      }
-  //    }
-  //  ],
-  //  "Enrich": [ "FromLogContext" ]
-  //}
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.MSSqlServer" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "DefaultConnection",
+          "tableName": "EmailLogs",
+          "autoCreateSqlTable": true
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext" ]
+  }
 }
