--- a/ServiceDesk/ServiceDesk.Ticket.Api/appsettings.json
+++ b/ServiceDesk/ServiceDesk.Ticket.Api/appsettings.json
@@ -2,7 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-OO8S81V;Database=TicketsDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;",
     "Assetsconnection": "Server=DESKTOP-OO8S81V;Database=AssetsDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
-    
+
   },
   "Logging": {
     "LogLevel": {
@@ -10,6 +10,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-
+  "AllowedHosts": "*",
+  "MailSettings": {
+    "Server": "sandbox.smtp.mailtrap.io",
+    "Port": "587",
+    "SenderName": "TestMail",
+    "SenderEmail": "test123456@example.com",
+    "UserName": "1ac6ad283a67f5",
+    "Password": "a8d76eb806b19b"
+  }
 }
