added basic styling

--- a/ServiceDesk/ServiceDesk.Ticket.Api/appsettings.json
+++ b/ServiceDesk/ServiceDesk.Ticket.Api/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-OO8S81V;Database=TicketsDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;",
+    //"DefaultConnection": "Server=DESKTOP-OO8S81V;Database=TicketsDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;",
+    "DefaultConnection": "Server = 127.0.0.1; Database = TicketsDb; user id = SA; password = Pass@word; Encrypt = false; TrustServerCertificate = true; Integrated Security = false;",
     "Assetsconnection": "Server=DESKTOP-OO8S81V;Database=AssetsDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
 
   },
