--- a/ServiceDesk/Gateway/appsettings.json
+++ b/ServiceDesk/Gateway/appsettings.json
@@ -12,8 +12,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server = 127.0.0.1; Database =Gateway; user id = SA; password = Pass@word; Encrypt = false; TrustServerCertificate = true; Integrated Security = false;"
-    //"DefaultConnection": "Server=DESKTOP-OO8S81V;Database=Gateway;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+    //"DefaultConnection": "Server = 127.0.0.1; Database =Gateway; user id = SA; password = Pass@word; Encrypt = false; TrustServerCertificate = true; Integrated Security = false;"
+    "DefaultConnection": "Server=DESKTOP-OO8S81V;Database=Gateway;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
 
   }
 
