--- a/ServiceDesk/ServiceDesk.Ticket.Api/appsettings.json
+++ b/ServiceDesk/ServiceDesk.Ticket.Api/appsettings.json
@@ -1,9 +1,9 @@
 {
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=DESKTOP-OO8S81V;Database=TicketsDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;",
-    "DefaultConnection": "Server = 127.0.0.1; Database = TicketsDb; user id = SA; password = Pass@word; Encrypt = false; TrustServerCertificate = true; Integrated Security = false;",
-    //"Assetsconnection": "Server=DESKTOP-OO8S81V;Database=AssetsDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;",
-    "Assetsconnection": "Server = 127.0.0.1; Database = AssetsDb; user id = SA; password = Pass@word; Encrypt = false; TrustServerCertificate = true; Integrated Security = false;"
+    "DefaultConnection": "Server=DESKTOP-OO8S81V;Database=TicketsDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;",
+    //"DefaultConnection": "Server = 127.0.0.1; Database = TicketsDb; user id = SA; password = Pass@word; Encrypt = false; TrustServerCertificate = true; Integrated Security = false;",
+    "Assetsconnection": "Server=DESKTOP-OO8S81V;Database=AssetsDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;",
+    //"Assetsconnection": "Server = 127.0.0.1; Database = AssetsDb; user id = SA; password = Pass@word; Encrypt = false; TrustServerCertificate = true; Integrated Security = false;"
 
   },
   "Logging": {
