--- a/ServiceDesk/Gateway/appsettings.json
+++ b/ServiceDesk/Gateway/appsettings.json
@@ -15,7 +15,9 @@
     //"DefaultConnection": "Server = 127.0.0.1; Database =Gateway; user id = SA; password = Pass@word; Encrypt = false; TrustServerCertificate = true; Integrated Security = false;"
     "DefaultConnection": "Server=DESKTOP-OO8S81V;Database=Gateway;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
 
+  },
+  "ApiSettings": {
+    "AssetsUrl": "http://localhost:5256/api/"
   }
-
 
 }
