fixed some errors

--- a/ServiceDesk/EmailNotification/appsettings.json
+++ b/ServiceDesk/EmailNotification/appsettings.json
@@ -15,7 +15,8 @@
     "Password": "a8d76eb806b19b"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-OO8S81V;Database=EmailLog;Trusted_Connection=True;TrustServerCertificate=True;"
+    //"DefaultConnection": "Server=DESKTOP-OO8S81V;Database=EmailLog;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server = 127.0.0.1; Database =EmailLog; user id = SA; password = Pass@word; Encrypt = false; TrustServerCertificate = true; Integrated Security = false;"
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.MSSqlServer" ],
